// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CategoryBaseForm /> renders when errors occured 1`] = `
<div
  className="MuiCardContent-root-3"
>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-4 MuiFormControl-fullWidth-7 Component-textField-2"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-13 MuiFormLabel-error-16 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11"
      data-shrink={true}
      htmlFor={undefined}
    >
      Name
    </label>
    <div
      className="MuiInput-root-18 MuiInput-error-23 MuiInput-fullWidth-25 MuiInput-formControl-19 MuiInput-underline-22"
    >
      <input
        aria-invalid={true}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={true}
        className="MuiInput-input-26"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value="Apparel"
      />
    </div>
    <p
      className="MuiFormHelperText-root-34 MuiFormHelperText-error-35"
      id={undefined}
    >
      To pole jest wymagane.
    </p>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-4 MuiFormControl-fullWidth-7"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11"
      data-shrink={true}
      htmlFor={undefined}
    >
      Description
    </label>
    <div
      className="MuiInput-root-18 MuiInput-fullWidth-25 MuiInput-formControl-19 MuiInput-multiline-24 MuiInput-underline-22"
    >
      <div
        className="MuiTextarea-root-31"
        style={
          Object {
            "height": 19,
          }
        }
      >
        <textarea
          aria-hidden="true"
          className="MuiTextarea-shadow-33 MuiTextarea-textarea-32"
          readOnly={true}
          rows="1"
          tabIndex={-1}
          value=""
        />
        <textarea
          aria-hidden="true"
          className="MuiTextarea-shadow-33 MuiTextarea-textarea-32"
          defaultValue={undefined}
          readOnly={true}
          rows={1}
          tabIndex={-1}
          value="Across pressure PM food discover recognize. Send letter reach listen. Quickly work plan rule.
Tell lose part purpose do when. Whatever drug contain particularly defense."
        />
        <textarea
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiTextarea-textarea-32 MuiInput-input-26 MuiInput-inputMultiline-28"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={1}
          type="text"
          value="Across pressure PM food discover recognize. Send letter reach listen. Quickly work plan rule.
Tell lose part purpose do when. Whatever drug contain particularly defense."
        />
      </div>
    </div>
    <p
      className="MuiFormHelperText-root-34"
      id={undefined}
    >
      Optional
    </p>
  </div>
</div>
`;

exports[`<CategoryBaseForm /> renders with initial data 1`] = `
<div
  className="MuiCardContent-root-3"
>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-4 MuiFormControl-fullWidth-7 Component-textField-2"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11"
      data-shrink={true}
      htmlFor={undefined}
    >
      Name
    </label>
    <div
      className="MuiInput-root-18 MuiInput-fullWidth-25 MuiInput-formControl-19 MuiInput-underline-22"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={true}
        className="MuiInput-input-26"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value="Apparel"
      />
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-4 MuiFormControl-fullWidth-7"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12 MuiInputLabel-shrink-11"
      data-shrink={true}
      htmlFor={undefined}
    >
      Description
    </label>
    <div
      className="MuiInput-root-18 MuiInput-fullWidth-25 MuiInput-formControl-19 MuiInput-multiline-24 MuiInput-underline-22"
    >
      <div
        className="MuiTextarea-root-31"
        style={
          Object {
            "height": 19,
          }
        }
      >
        <textarea
          aria-hidden="true"
          className="MuiTextarea-shadow-33 MuiTextarea-textarea-32"
          readOnly={true}
          rows="1"
          tabIndex={-1}
          value=""
        />
        <textarea
          aria-hidden="true"
          className="MuiTextarea-shadow-33 MuiTextarea-textarea-32"
          defaultValue={undefined}
          readOnly={true}
          rows={1}
          tabIndex={-1}
          value="Across pressure PM food discover recognize. Send letter reach listen. Quickly work plan rule.
Tell lose part purpose do when. Whatever drug contain particularly defense."
        />
        <textarea
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiTextarea-textarea-32 MuiInput-input-26 MuiInput-inputMultiline-28"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={1}
          type="text"
          value="Across pressure PM food discover recognize. Send letter reach listen. Quickly work plan rule.
Tell lose part purpose do when. Whatever drug contain particularly defense."
        />
      </div>
    </div>
    <p
      className="MuiFormHelperText-root-34"
      id={undefined}
    >
      Optional
    </p>
  </div>
</div>
`;

exports[`<CategoryBaseForm /> renders without initial data 1`] = `
<div
  className="MuiCardContent-root-3"
>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-4 MuiFormControl-fullWidth-7 Component-textField-2"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12"
      data-shrink={false}
      htmlFor={undefined}
    >
      Name
    </label>
    <div
      className="MuiInput-root-18 MuiInput-fullWidth-25 MuiInput-formControl-19 MuiInput-underline-22"
    >
      <input
        aria-invalid={false}
        aria-required={false}
        autoComplete={undefined}
        autoFocus={true}
        className="MuiInput-input-26"
        defaultValue={undefined}
        disabled={false}
        id={undefined}
        name="name"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        onKeyDown={undefined}
        onKeyUp={undefined}
        placeholder={undefined}
        readOnly={undefined}
        required={undefined}
        rows={undefined}
        type="text"
        value=""
      />
    </div>
  </div>
  <div
    aria-describedby={undefined}
    className="MuiFormControl-root-4 MuiFormControl-fullWidth-7"
    onBlur={[Function]}
    onFocus={[Function]}
  >
    <label
      className="MuiFormLabel-root-13 MuiInputLabel-root-8 MuiInputLabel-formControl-9 MuiInputLabel-animated-12"
      data-shrink={false}
      htmlFor={undefined}
    >
      Description
    </label>
    <div
      className="MuiInput-root-18 MuiInput-fullWidth-25 MuiInput-formControl-19 MuiInput-multiline-24 MuiInput-underline-22"
    >
      <div
        className="MuiTextarea-root-31"
        style={
          Object {
            "height": 19,
          }
        }
      >
        <textarea
          aria-hidden="true"
          className="MuiTextarea-shadow-33 MuiTextarea-textarea-32"
          readOnly={true}
          rows="1"
          tabIndex={-1}
          value=""
        />
        <textarea
          aria-hidden="true"
          className="MuiTextarea-shadow-33 MuiTextarea-textarea-32"
          defaultValue={undefined}
          readOnly={true}
          rows={1}
          tabIndex={-1}
          value=""
        />
        <textarea
          aria-invalid={false}
          aria-required={false}
          autoComplete={undefined}
          autoFocus={undefined}
          className="MuiTextarea-textarea-32 MuiInput-input-26 MuiInput-inputMultiline-28"
          defaultValue={undefined}
          disabled={false}
          id={undefined}
          name="description"
          onBlur={[Function]}
          onChange={[Function]}
          onFocus={[Function]}
          onKeyDown={undefined}
          onKeyUp={undefined}
          placeholder={undefined}
          readOnly={undefined}
          required={undefined}
          rows={1}
          type="text"
          value=""
        />
      </div>
    </div>
    <p
      className="MuiFormHelperText-root-34"
      id={undefined}
    >
      Optional
    </p>
  </div>
</div>
`;
